# sef

./: CMakeLists.txt  README.md  compile_flags.txt
docs/: getting-started.md
examples/: arguments.c  chain.c  helloworld.c  strformatter.c  structfmt.c
src/: args.c  context.c  core.c  error.c  execfmt.c  registry.c  size.c  writer.c
src/ds/: dynamic_array.c
src/inc/: parse.h  registry.h  warntype.h
src/inc/ds/: dynamic_array.h  dynamic_array_template.h
src/inc/sef/: _context.h  _parse.h  _pubtypes.h  _warntype.h  _writer.h  args.h  context.h  error.h  execfmt.h  limits.h  parse.h  registry.h  sef.h  writer.h
src/inc/sef/_ds/: dynamic_array.h  dynamic_array_template.h
